force-app/main/default/objects/MktParte__c/MktParte__c.object-meta.xml
<CustomObject>
    <label>Parte</label>
    <nameField>
        <displayFormat>PART{0}</displayFormat>
        <label>Identificação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>