force-app/main/default/objects/MktParte__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Categoria</label>
    <referenceTo>MktCategoria__c</referenceTo>
    <relationshipLabel>Partes</relationshipLabel>
    <relationshipName>Partes</relationshipName>
    <type>Lookup</type>
</CustomField>