force-app/main/default/objects/MktParte__c/fields/Categoria_nome__c.field-meta.xml
<CustomField>
    <fullName>Categoria_nome__c</fullName>
    <formula>Categoria__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria (nome)</label>
    <type>Text</type>
</CustomField>