force-app/main/default/objects/MktParte__c/fields/Categoria_pai__c.field-meta.xml
<CustomField>
    <fullName>Categoria_pai__c</fullName>
    <formula>Categoria__r.Categoria_Pai__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria pai</label>
    <type>Text</type>
</CustomField>