force-app/main/default/objects/MktParte__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <formula>Parte__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código fornecedor</label>
    <type>Text</type>
</CustomField>