force-app/main/default/objects/MktParte__c/fields/Codigo_hospcom__c.field-meta.xml
<CustomField>
    <fullName>Codigo_hospcom__c</fullName>
    <formula>Parte__r.StockKeepingUnit</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código hospcom</label>
    <type>Text</type>
</CustomField>