force-app/main/default/objects/MktParte__c/fields/Icone__c.field-meta.xml
<CustomField>
    <fullName>Icone__c</fullName>
    <formula>Parte__r.URL_da_Imagem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icone</label>
    <type>Text</type>
</CustomField>