force-app/main/default/objects/MktParte__c/fields/Icone_mini__c.field-meta.xml
<CustomField>
    <fullName>Icone_mini__c</fullName>
    <formula>IF(
    ISBLANK(Icone__c),
    IMAGE(&quot;https://hospcom--c.na49.content.force.com/servlet/servlet.ImageServer?id=0155A000009y8x5&amp;oid=00Di0000000JVhH&amp;lastMod=1544439559000&quot; , &quot;&quot;, 125, 125),
    IMAGE(Icone__c , &quot;&quot;, 125, 125)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icone</label>
    <type>Text</type>
</CustomField>