force-app/main/default/objects/MktParte__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <formula>Parte__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome (Produto)</label>
    <type>Text</type>
</CustomField>