force-app/main/default/objects/MktParte__c/fields/Parte__c.field-meta.xml
<CustomField>
    <fullName>Parte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parte</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product2.Tipo_do_Produto__c</field>
            <operation>equals</operation>
            <value>ACESSÓRIO, PEÇA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Partes</relationshipLabel>
    <relationshipName>Partes_de_Produto</relationshipName>
    <type>Lookup</type>
</CustomField>