force-app/main/default/objects/MktParte__c/fields/Quantidade_em_Estoque_Oficial__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_em_Estoque_Oficial__c</fullName>
    <formula>Parte__r.Quantidade_em_Estoque_Oficial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade em Estoque Oficial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>