force-app/main/default/objects/MktParte__c/fields/ValorKit__c.field-meta.xml
<CustomField>
    <fullName>ValorKit__c</fullName>
    <formula>Parte__r.Valor_de_Venda__c + Parte__r.Valor_dos_Acessorios__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValorKit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>