force-app/main/default/objects/MktParte__c/fields/Vet__c.field-meta.xml
<CustomField>
    <fullName>Vet__c</fullName>
    <formula>Categoria__r.Vet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vet</label>
    <type>Checkbox</type>
</CustomField>